// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Errors component should render block errors 1`] = `
<div
  class="text-danger"
>
  Foo
</div>
`;

exports[`Errors component should render block errors with display adjustements to display it below an input 1`] = `
<div
  class="text-danger"
  style="margin-top: -8px; margin-bottom: .5rem;"
>
  Foo
</div>
`;

exports[`Errors component should render inline errors 1`] = `
<div
  class="d-inline-block text-danger ml-2"
>
  Foo
</div>
`;

exports[`Errors component should render using passed tag 1`] = `
<pre
  class="text-danger"
>
  Foo
</pre>
`;

exports[`Errors component should return null if there is no errors 1`] = `null`;
